--- a/index.ipynb
+++ b/index.ipynb
@@ -42,18 +42,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_50 = 50\n",
     "less_than_50 = None\n",
     "if number_50 > 100:\n",
-    "    # if number_50 is greater than 100, assign the `less_than_50` variable to the number 100\n",
-    "elif number_50 < 50:\n",
-    "    # if number_50 is greater than 50, assign the `less_than_50` variable to the number 50\n",
+    "    less_than_50 = 100 # if number_50 is greater than 100, assign the `less_than_50` variable to the number 100\n",
+    "elif number_50 > 50:\n",
+    "    less_than_50 = 50 # if number_50 is greater than 50, assign the `less_than_50` variable to the number 50\n",
     "else:\n",
-    "    # else assign the `less_than_50` variable to 49"
+    "    less_than_50 = 49 # else assign the `less_than_50` variable to 49\n",
+    "\n",
+    "less_than_50\n",
+    "    "
    ]
   },
   {
@@ -71,7 +85,7 @@
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "# conditionals go here"
+    "if temperature > 80# conditionals go here"
    ]
   },
   {
@@ -143,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
