--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "if temperature > 80# conditionals go here"
+    "if temperature > 80:# conditionals go here"
    ]
   },
   {
