--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
     "temperature = 85\n",
     "is_it_hot = None\n",
     "if temperature > 80:\n",
-    "    print('' # conditionals go here"
+    "    print('It is so hot out!') "
    ]
   },
   {
