--- a/index.ipynb
+++ b/index.ipynb
@@ -86,8 +86,7 @@
     "temperature = 85\n",
     "is_it_hot = None\n",
     "if temperature > 80:\n",
-    "    it_is_hot = 'It is so hot out!'\n",
-    "    "
+    "    it_is_hot = 'It is so hot out!'\n"
    ]
   },
   {
