--- a/index.ipynb
+++ b/index.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
     "if temperature > 80:\n",
     "    it_is_hot = 'It is so hot out!'\n",
     "else:\n",
-    "    it_is_hot = ''"
+    "    it_is_hot = 'This is nothing! Bring on the heat.'"
    ]
   },
   {
