--- a/index.ipynb
+++ b/index.ipynb
@@ -79,9 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is so hot out!\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
@@ -90,7 +98,7 @@
     "else:\n",
     "    it_is_hot = 'This is nothing! Bring on the heat.'\n",
     "\n",
-    "print()"
+    "print(it_is_hot)"
    ]
   },
   {
