--- a/index.ipynb
+++ b/index.ipynb
@@ -117,7 +117,7 @@
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "days = (\"Sunday\",\"Monday\",\"Tuesday\",\"Wednes\")"
+    "days = (\"Sunday\",\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"frida\")"
    ]
   },
   {
