--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,7 @@
     "today_is = 4\n",
     "day_of_the_week = None\n",
     "days = (\"Sunday\",\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\")\n",
-    "day_of_the_week = d"
+    "day_of_the_week = days[today_is - 1]"
    ]
   },
   {
