Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,14 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wednesday'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
     "days = (\"Sunday\",\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\")\n",
-    "day_of_the_week = days[today_is - 1]"
+    "day_of_the_week = days[today_is - 1]\n",
+    "\n",
+    "day_of_the_week"
    ]
   },
   {
