--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,8 @@
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "\n",
-    "if string.ends_with(\"\")"
+    "if string.ends_with(sub_string):\n",
+    "    "
    ]
   },
   {
