--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
     "ends_with = None\n",
     "\n",
     "if string.ends_with(sub_string):\n",
-    "    "
+    "    ends_with = "
    ]
   },
   {
